# esp-rust-no-std-weather-station

./: Cargo.toml  README.MD
.cargo/: config.toml
case/: esp32_screen_holder_1.stl  esp32_screen_holder_2.stl
src/: draw_plot.rs  dto.rs  lib.rs
